# BI_Projekt2.0

./: DABI2_PySpark_ML.ipynb  Dashboard_Dabi.ipynb  beautifulTableVisualization.ipynb  data_import.py  datenanalyse.ipynb  ferien_extract.ipynb  ronja.ipynb  ronjaDoesEvenMoreMLShit.ipynb  ronjaDoesMLShit.ipynb
data/: data4SuperDuperTableOfDoom.csv  data4SuperDuperTableOfDoomV2.csv
historical_data_preprocessing/: combineCsvFilesProState.ipynb  excel2csv_Monatsbericht_Tourismus_0601_0812.py  excel2csv_Monatsbericht_Tourismus_0901_2212.py
old/: nights_per_state.html  ronjaDoesMLShit.ipynb
ronja/: RenameValues.ipynb  campSitesNew.ipynb  campSitesNew.py  combineCsvFiles.ipynb  combineCsvFilesCampSites.ipynb  combineCsvFilesProBundesland.ipynb  createData4SuperDuperTableOfDoom.ipynb  createSuperTrooperTableOfDoom.ipynb  excel2csv_Monatsbericht_Tourismus_0201_0512.py  excel2csv_Monatsbericht_Tourismus_0601_0812.py  excel2csv_Monatsbericht_Tourismus_0901_2212.py  excel2structured.ipynb  excel2structured.py  excel2structuredMediumOldFiles.py  excel2structuredOldFiles.py  fileTransformation.ipynb
rust/data_scraper/: Cargo.toml  Dockerfile
rust/data_scraper/src/: context.rs  main.rs  settings.rs
rust/data_scraper/src/helpers/: api_functions.rs  mod.rs  scrape_functions.rs  xlsx_functions.rs
rust/data_scraper/src/queries/: insert_into_uebernachtungen_nach_herkunftsland.sql  insert_into_uebernachtungen_pro_land.sql  select_already_fetched_dates.sql
rust/data_scraper/src/tasks/: get_sleepover_data.rs  mod.rs  send_dummy_event.rs  start_ferien_update.rs
(+134 files in other folders)
